Deleting Slashes images

--- a/Home.html
+++ b/Home.html
@@ -199,7 +199,7 @@
         <div class="card">
           <img
             class="img1"
-            src="/imgs/kisspng-sneakers-vans-old-skool-skate-shoe-retro-van-5b1854f4cd86d6 1.png"
+            src="imgs/kisspng-sneakers-vans-old-skool-skate-shoe-retro-van-5b1854f4cd86d6 1.png"
             alt=""
           />
           <h2 class="meza">Meza</h2>
@@ -217,7 +217,7 @@
 
       <div class="container4">
         <div class="card">
-          <img class="img1" src="/imgs/unsplash_Gi3iUJ1FwxI.png" alt="" />
+          <img class="img1" src="imgs/unsplash_Gi3iUJ1FwxI.png" alt="" />
           <h2 class="meza">Meza</h2>
           <div class="flex">
             <span class="tzs">TZS 100000</span>
@@ -231,7 +231,7 @@
         </div>
 
         <div class="card">
-          <img class="img1" src="/imgs/unsplash_LSNJ-pltdu8.png" alt="" />
+          <img class="img1" src="imgs/unsplash_LSNJ-pltdu8.png" alt="" />
           <h2 class="meza">Meza</h2>
           <div class="flex">
             <span class="tzs">TZS 100000</span>
@@ -245,7 +245,7 @@
         </div>
 
         <div class="card">
-          <img class="img1" src="/imgs/kindpng_2364377 1.png" alt="" />
+          <img class="img1" src="imgs/kindpng_2364377 1.png" alt="" />
           <h2 class="meza">Meza</h2>
           <div class="flex">
             <span class="tzs">TZS 100000</span>
@@ -261,7 +261,7 @@
         <div class="card">
           <img
             class="img1"
-            src="/imgs/kisspng-sneakers-vans-old-skool-skate-shoe-retro-van-5b1854f4cd86d6 1.png"
+            src="imgs/kisspng-sneakers-vans-old-skool-skate-shoe-retro-van-5b1854f4cd86d6 1.png"
             alt=""
           />
           <h2 class="meza">Meza</h2>
@@ -279,7 +279,7 @@
 
       <div class="container5">
         <div class="card">
-          <img class="img1" src="/imgs/image 25.png" alt="" />
+          <img class="img1" src="imgs/image 25.png" alt="" />
           <h2 class="meza">Meza</h2>
           <div class="flex">
             <span class="tzs">TZS 100000</span>
@@ -293,7 +293,7 @@
         </div>
 
         <div class="card">
-          <img class="img1" src="/imgs/kindpng_2364377 1.png" alt="" />
+          <img class="img1" src="imgs/kindpng_2364377 1.png" alt="" />
           <h2 class="meza">Meza</h2>
           <div class="flex">
             <span class="tzs">TZS 100000</span>
@@ -309,7 +309,7 @@
         <div class="card">
           <img
             class="img1"
-            src="/imgs/kisspng-sneakers-vans-old-skool-skate-shoe-retro-van-5b1854f4cd86d6 1.png"
+            src="imgs/kisspng-sneakers-vans-old-skool-skate-shoe-retro-van-5b1854f4cd86d6 1.png"
             alt=""
           />
           <h2 class="meza">Meza</h2>
@@ -325,7 +325,7 @@
         </div>
 
         <div class="card">
-          <img class="img1" src="/imgs/unsplash_LSNJ-pltdu8.png" alt="" />
+          <img class="img1" src="imgs/unsplash_LSNJ-pltdu8.png" alt="" />
           <h2 class="meza">Meza</h2>
           <div class="flex">
             <span class="tzs">TZS 100000</span>
