--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
       <div class="container3">
         <div class="card">
-          <img class="img1" src="/imgs/image 22(1).png" alt="" />
+          <img class="img1" src="imgs/image 22(1).png" alt="" />
           <h2 class="meza">Meza</h2>
           <div class="flex">
             <span class="tzs">TZS 100000</span>
@@ -169,7 +169,7 @@
         </div>
 
         <div class="card">
-          <img class="img1" src="/imgs/image 25(1).png" alt="" />
+          <img class="img1" src="imgs/image 25(1).png" alt="" />
           <h2 class="meza">Meza</h2>
           <div class="flex">
             <span class="tzs">TZS 100000</span>
@@ -183,7 +183,7 @@
         </div>
 
         <div class="card">
-          <img class="img1" src="/imgs/kindpng_2364377 1.png" alt="" />
+          <img class="img1" src="imgs/kindpng_2364377 1.png" alt="" />
           <h2 class="meza">Meza</h2>
           <div class="flex">
             <span class="tzs">TZS 100000</span>
