--- a/PAGE3/index.html
+++ b/PAGE3/index.html
@@ -68,7 +68,7 @@
         </defs>
       </svg>
 
-      <li><a class="sell" href="/PAGE2/index.html">Sell</a></li>
+      <li><a class="sell" href="">Sell</a></li>
       <li><a class="profile" href="/page6/index.html">Profile</a></li>
       <svg
         class="hamburger"
