--- a/Sell.html
+++ b/Sell.html
@@ -82,18 +82,10 @@
         />
       </svg>
       <li><a class="ads" href="/page5/index.html">Ads</a></li>
-      <li class="GO-BACK"><a href="/PAGE1/index.html">RETURN</a></li>
+      <li class="GO-BACK"><a href="index.html">RETURN</a></li>
     </nav>
 
 
-    <div class="dropdown">
-      <a href="/PAGE3/index.html">Register</a>
-       <a href="/Page4/index.html">Login</a>
-        <a href="/PAGE2/">Sell</a>
-        <a href="/page6/index.html">Profile</a>
-        <a href="/page5/index.html">Ads</a>
-        <a href="/PAGE1/index.html">Return</a>
-      </div>
   
   
      <div id="overlay">
@@ -220,6 +212,6 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
-    <script src="/PAGE2/index.js"></script>
+    <script src="Main.js"></script>
   </body>
 </html>
