--- a/Sell.html
+++ b/Sell.html
@@ -116,7 +116,7 @@
     <section>
       <div class="container2">
         <div class="img">
-          <img class="img-section" src="/imgs/image 22(1).png" alt="" />
+          <img class="img-section" src="imgs/image 22(1).png" alt="" />
           <div class="button-slide-box">
             <button class="button-slide"></button>
             <button class="button-slide"></button>
