--- a/Profile.html
+++ b/Profile.html
@@ -5,21 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-    />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="Profile.css" />
   </head>
   <body>
     <nav>
@@ -35,8 +21,8 @@
           d="M480 575q-66 0-108-42t-42-108q0-66 42-108t108-42q66 0 108 42t42 108q0 66-42 108t-108 42ZM160 896v-94q0-38 19-65t49-41q67-30 128.5-45T480 636q62 0 123 15.5T731 696q31 14 50 41t19 65v94H160Z"
         />
       </svg>
-      <li class="register"><a href="">Register</a></li>
-      <li class="login"><a href="/Page4/index.html">Login</a></li>
+      <li class="register"><a href="Register.html">Register</a></li>
+      <li class="login"><a href="Login.html">Login</a></li>
       <svg
         class="add_svg"
         width="58"
@@ -67,9 +53,8 @@
           />
         </defs>
       </svg>
+      <li><a class="sell" href="Sell.html">Sell</a></li>
 
-      <li><a class="sell" href="">Sell</a></li>
-      <li><a class="profile" href="/page6/index.html">Profile</a></li>
       <svg
         class="hamburger"
         xmlns="http://www.w3.org/2000/svg"
@@ -81,14 +66,9 @@
           d="M120 816v-60h720v60H120Zm0-210v-60h720v60H120Zm0-210v-60h720v60H120Z"
         />
       </svg>
-      <li><a class="ads" href="/page5/index.html">Ads</a></li>
-      <li class="GO-BACK"><a href="/PAGE1/index.html">RETURN</a></li>
+      <li><a class="ads" href="Ads.html">Ads</a></li>
+      <li class="GO-BACK"><a href="index.html">RETURN</a></li>
     </nav>
-
-
-
-
-
     <div class="dropdown">
       <a href="/PAGE3/index.html">Register</a>
        <a href="/Page4/index.html">Login</a>
@@ -103,97 +83,50 @@
   
      </div>
 
-
-    
     <section>
       <div class="container">
-        <div class="img-box">
-          <img class="img" src="/imgs/iT project img.PNG" alt="" />
+        <div class="flex-top">
+          <img class="face-image" src="/imgs/face.png" alt="" />
+          <div>
+            <img class="vector" src="/imgs/Vector(4).png" alt="" />
+          </div>
+
+          <p class="ads">Ads</p>
+          <br />
+          <div class="button-box">
+            <button class="edit">Edit Account</button>
+          </div>
         </div>
 
-        <div class="right-side-content">
-          <div class="sign-in-up">
-            <button class="sign-up">Sign up</button>
+        <div class="low-text">
+          <h1 class="name">Lisa Jocktan</h1>
+          <p class="date">Member Since 2017</p>
+        </div>
 
-            <button class="sign-in">Sign In</button>
-          </div>
-
-          <h5 class="account">Create an account</h5>
-          <p class="get-started">
-            Let’s get started with your 30 days free trial
-          </p>
-          <div class="input">
-            <label for="">Name</label>
-            <br />
-            <input type="text" />
-
-            <div>
-              <label for="">Email</label>
-              <br />
-              <input type="text" />
-            </div>
-
-            <label for="">Password</label>
-            <br />
-            <input type="password" />
-          </div>
-
+        <div class="input">
+          <label for="">Product Name</label>
+          <br />
+          <input type="text" />
+          <br />
+          <label class="uni" for="">University</label>
+          <br />
+          <input type="text" />
+          <br />
+          <label class="desc" for="">Description</label>
           <br />
           <br />
-          <br />
-
-          <div class="button">
-            <button class="create">Create Account</button>
-
-            <br />
-
-            <button class="sign-up2">Sign up with Google</button>
-          </div>
-
+          <input type="text" />
           <br />
           <br />
+          <label class="number" for=""> Phone Number</label>
           <br />
           <br />
-
-          <p class="already">Already have an account? <span>Sign in</span></p>
+          <input type="text" />
         </div>
       </div>
     </section>
 
-    <footer>
-      <div class="container6">
-        <div class="text">
-          <h1 class="online-shop">Online-Shop</h1>
-          <p class="lorem-footer">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet omnis
-            illum quisquam dolore tempora quasi eveniet accusantium
-            necessitatibus dolores officiis!
-          </p>
-        </div>
-
-        <div class="text-right-side">
-          <div class="text5">
-            <h1 class="contact">Contact Us</h1>
-            <p class="phone-number fas fa-phone-flip">599233466</p>
-            <div>
-              <p class="gmail fas fa-envelope">lisajocktan@gmail.com</p>
-            </div>
-
-            <div>
-              <p class="location fas fa-location-dot">Kijitonyama</p>
-            </div>
-          </div>
-
-          <div class="text6">
-            <h2 class="about-us">About Us</h2>
-            <p class="Support">Support</p>
-            <p class="Privacy">Privacy & Policy</p>
-          </div>
-        </div>
-      </div>
-    </footer>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
-    <script src="/PAGE3/index.js"></script>
+    <script src="/page6/index.js"></script>
   </body>
 </html>
