--- a/Sell.html
+++ b/Sell.html
@@ -34,8 +34,8 @@
           d="M480 575q-66 0-108-42t-42-108q0-66 42-108t108-42q66 0 108 42t42 108q0 66-42 108t-108 42ZM160 896v-94q0-38 19-65t49-41q67-30 128.5-45T480 636q62 0 123 15.5T731 696q31 14 50 41t19 65v94H160Z"
         />
       </svg>
-      <li class="register"><a href="/PAGE3/index.html">Register</a></li>
-      <li class="login"><a href="/Page4/index.html">Login</a></li>
+      <li class="register"><a href="Register.html">Register</a></li>
+      <li class="login"><a href="Login.html">Login</a></li>
       <svg
         class="add_svg"
         width="58"
@@ -68,7 +68,7 @@
       </svg>
 
       <li><a class="sell" href="">Sell</a></li>
-      <li><a class="profile" href="/page6/index.html">Profile</a></li>
+      <li><a class="profile" href="Profile.html">Profile</a></li>
 
       <svg
         class="hamburger"
@@ -81,7 +81,7 @@
           d="M120 816v-60h720v60H120Zm0-210v-60h720v60H120Zm0-210v-60h720v60H120Z"
         />
       </svg>
-      <li><a class="ads" href="/page5/index.html">Ads</a></li>
+      <li><a class="ads" href="Ads.html">Ads</a></li>
       <li class="GO-BACK"><a href="index.html">RETURN</a></li>
     </nav>
 
