--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           d="M480 575q-66 0-108-42t-42-108q0-66 42-108t108-42q66 0 108 42t42 108q0 66-42 108t-108 42ZM160 896v-94q0-38 19-65t49-41q67-30 128.5-45T480 636q62 0 123 15.5T731 696q31 14 50 41t19 65v94H160Z"
         />
       </svg>
-      <li class="register"><a href="/PAGE3/index.html">Register</a></li>
-      <li class="login"><a href="/Page4/index.html">Login</a></li>
+      <li class="register"><a href="Register.html">Register</a></li>
+      <li class="login"><a href="Login.html">Login</a></li>
       <svg
         class="add_svg"
         width="58"
@@ -75,9 +75,9 @@
       
 
       <li><a class="sell" href="Sell.html">Sell</a></li>
-      <li><a class="profile" href="/page6/index.html">Profile</a></li>
+      <li><a class="profile" href="Profile.html">Profile</a></li>
       
-      <li><a class="ads" href="/page5/index.html">Ads</a></li>
+      <li><a class="ads" href="Ads.html">Ads</a></li>
       <svg
       class="hamburger"
       xmlns="http://www.w3.org/2000/svg"
