--- a/Login.html
+++ b/Login.html
@@ -111,14 +111,14 @@
 
           <br />
 
-          <button class="sign-in2">Sign in with Google</button>
+          <button class="sign-in2"><a style="text-decoration: none; color: red;" href="https://accounts.google.com/InteractiveLogin/signinchooser?elo=1&flowEntry=ServiceLogin&flowName=GlifWebSignIn&ifkv=AQMjQ7SiKXIqXu4IUbYjxDSovKi5G0X_fmSri-WDMloCKudD9-rD9tsinMDSBP55EmbnZnyjoRYkzQ">Sign in With Google</a></button>
 
           <br />
           <br />
           <br />
           <br />
 
-          <p class="already">Already have an account? <span>Sign in</span></p>
+         
         </div>
       </div>
     </section>
