--- a/Login.html
+++ b/Login.html
@@ -111,7 +111,7 @@
 
           <br />
 
-          <button class="sign-in2"><a style="text-decoration: none; color: red;" href="https://accounts.google.com/InteractiveLogin/signinchooser?elo=1&flowEntry=ServiceLogin&flowName=GlifWebSignIn&ifkv=AQMjQ7SiKXIqXu4IUbYjxDSovKi5G0X_fmSri-WDMloCKudD9-rD9tsinMDSBP55EmbnZnyjoRYkzQ">Sign in With Google</a></button>
+          <button class="sign-in2">Sign in With Google</button>
 
           <br />
           <br />
