--- a/Register.html
+++ b/Register.html
@@ -143,7 +143,7 @@
           <br />
 
           <div class="button">
-            <button class="create"><a style="text-decoration: none; color: white;" href="https://accounts.google.com/signup/v2/webcreateaccount?continue=https%3A%2F%2Fmyaccount.google.com%3Futm_source%3Daccount-marketing-page%26utm_medium%3Dcreate-account-button&flowName=GlifWebSignIn&flowEntry=SignUp">Create Account</a>  </button>
+            <button class="create">Create Account </button>
 
             <br />
 
@@ -155,7 +155,7 @@
           <br />
           <br />
 
-          <p class="already">Already have an account? <span><a href="https://accounts.google.com/InteractiveLogin/signinchooser?elo=1&flowEntry=ServiceLogin&flowName=GlifWebSignIn&ifkv=AQMjQ7SiKXIqXu4IUbYjxDSovKi5G0X_fmSri-WDMloCKudD9-rD9tsinMDSBP55EmbnZnyjoRYkzQ">Sign in</a> </span></p>
+          <p class="already">Already have an account? <span>Sign in </span></p>
         </div>
       </div>
     </section>
