--- a/Register.html
+++ b/Register.html
@@ -143,7 +143,7 @@
           <br />
 
           <div class="button">
-            <button class="create">Create Account </button>
+            <button class="create" style="color: white">Create Account </button>
 
             <br />
 
