--- a/Register.html
+++ b/Register.html
@@ -90,18 +90,20 @@
 
 
     <div class="dropdown">
-      <a href="/PAGE3/index.html">Register</a>
-       <a href="/Page4/index.html">Login</a>
-        <a href="/PAGE2/">Sell</a>
-        <a href="/page6/index.html">Profile</a>
-        <a href="/page5/index.html">Ads</a>
-        <a href="/PAGE1/index.html">Return</a>
+      <a class="reg" href="Register.html">Register</a>
+      <a  class="log" href="Login.html">Login</a>
+      <a class="selling" href="Sell.html">Sell</a>
+      <a class="pro-file" href="Profile.html">Profile</a>
+      <a class="pro-file" href="index.html">Return</a>
       </div>
   
+      <div id="overlay" style="width: 100vh; height: 100vh;
+       position: fixed;
+        top: 0;
+        left: 0;
+        overflow: hidden;">
+      </div>
   
-     <div id="overlay">
-  
-     </div>
 
 
     
@@ -194,6 +196,6 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
-   
+    <script src="Dropdown.js"></script>
   </body>
 </html>
