--- a/Sell.html
+++ b/Sell.html
@@ -88,10 +88,21 @@
 
   
   
-     <div id="overlay">
+    <div class="dropdown">
+      <a class="reg" href="Register.html">Register</a>
+      <a  class="log" href="Login.html">Login</a>
+      <a class="selling" href="Sell.html">Sell</a>
+      <a class="pro-file" href="Profile.html">Profile</a>
+      <a class="pro-file" href="index.html">Return</a>
+      </div>
   
-     </div>
-
+      <div id="overlay" style="width: 100vh; height: 100vh;
+       position: fixed;
+        top: 0;
+        left: 0;
+        overflow: hidden;">
+      </div>
+  
 
     <header>
       <div class="container">
@@ -212,6 +223,6 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
-  
+    <script src="Dropdown.js"></script>
   </body>
 </html>
