--- a/index.html
+++ b/index.html
@@ -94,8 +94,19 @@
       
     </nav>
 
+    <div class="dropdown">
+    <a class="reg" href="Register.html">Register</a>
+    <a  class="log" href="Login.html">Login</a>
+    <a class="selling" href="Sell.html">Sell</a>
+    <a class="pro-file" href="Profile.html">Profile</a>
+    </div>
 
-
+    <div id="overlay" style="width: 100vh; height: 100vh;
+     position: fixed;
+      top: 0;
+      left: 0;
+      overflow: hidden;">
+    </div>
 
 
 
@@ -383,6 +394,6 @@
       crossorigin="anonymous"
     ></script>
 
- 
+ <script src="Dropdown.js"></script>
   </body>
 </html>
