little slash changes

--- a/Login.html
+++ b/Login.html
@@ -55,7 +55,7 @@
       </svg>
 
       <li><a class="sell" href="Sell.html">Sell</a></li>
-      <li><a class="profile" href="">Profile</a></li>
+      <li><a class="profile" href="Profile.html">Profile</a></li>
       <svg
         class="hamburger"
         xmlns="http://www.w3.org/2000/svg"
