--- a/Profile.html
+++ b/Profile.html
@@ -89,9 +89,9 @@
     <section>
       <div class="container">
         <div class="flex-top">
-          <img class="face-image" src="/imgs/face.png" alt="" />
+          <img class="face-image" src="imgs/face.png" alt="" />
           <div>
-            <img class="vector" src="/imgs/Vector(4).png" alt="" />
+            <img class="vector" src="imgs/Vector(4).png" alt="" />
           </div>
 
           <p class="ads">Ads</p>
